projects/argocd/kube/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argocd
spec:
  stripPrefix:
    prefixes:
      - /argocd
